Add tournament simulation classes and utilities; update .gitignore and VSCode settings